Renamed projects to something sensible

--- a/ArduinoCode/ArduinoCode.filters
+++ b/ArduinoCode/ArduinoCode.filters
@@ -13,30 +13,33 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="ArduinoLibMock">
+      <UniqueIdentifier>{c1babd51-2569-47f9-a3e0-19c5fab498b7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ArduinoLibraryMock\Arduino.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\Blinky\LED.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\ArduinoLibraryMock\MockPins.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\ArduinoLibraryMock\stdint_ex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\ArduinoLibraryMock\MockPins.h">
+      <Filter>ArduinoLibMock</Filter>
+    </ClInclude>
+    <ClInclude Include="..\ArduinoLibraryMock\Arduino.h">
+      <Filter>ArduinoLibMock</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\ArduinoLibraryMock\Arduino.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\Blinky\LED.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\ArduinoLibraryMock\Arduino.cpp">
+      <Filter>ArduinoLibMock</Filter>
+    </ClCompile>
     <ClCompile Include="..\ArduinoLibraryMock\MockPins.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>ArduinoLibMock</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
