--- a/ArduinoCode/ArduinoCode.vcxproj
+++ b/ArduinoCode/ArduinoCode.vcxproj
@@ -34,6 +34,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>Thingies</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>ArduinoCode</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
